--- a/php-csrf/www/data/csrf_trap.html
+++ b/php-csrf/www/data/csrf_trap.html
@@ -19,7 +19,7 @@
       <div class="ui divider"></div>
 
       <div class="content">
-        <h2># 購入画面におけるCSRF</h2>
+        <h2># 1. 購入画面におけるCSRF</h2>
         <p>ここでは購入画面でCSRFの脆弱性が存在する場合のデモを行います。</p>
         <div class="trap">
           <form id="csrf_form_shopping" action="" method="post" target="iframe_shopping">
@@ -39,7 +39,7 @@
       <div class="ui divider"></div>
 
       <div class="content">
-        <h2># レビュー投稿画面におけるCSRF</h2>
+        <h2># 2. レビュー投稿画面におけるCSRF</h2>
         <p>ここではレビュー投稿画面でCSRFの脆弱性が存在する場合のデモを行います。</p>
         <div class="trap">
           <form id="csrf_form_review" action="" method="post" target="iframe_reviw">
